--- a/css/buttons.css
+++ b/css/buttons.css
@@ -6,6 +6,10 @@ button {
 	margin-top: .2rem;
 	margin-bottom: .2rem;
 	padding: .25rem;
+
+	font-family: 'oldlondon';
+	font-size: 1.5rem;
+	letter-spacing: .25rem;
 }
 
 button:hover {
