--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,15 +1,34 @@
 button {
-	background: url("../img/ui/limestone.jpg");
-	border-radius: .25rem;
-	border: 2px solid gold;
+	background: url("../img/ui/buttons/limestone_texture.webp");
 	cursor: pointer;
-	margin-top: .2rem;
-	margin-bottom: .2rem;
-	padding: .25rem;
+	margin-top: .4rem;
+	margin-bottom: .4rem;
+
+	padding: 15px 30px;
+	border: none;
+	clip-path: polygon(40% 0%, 60% 0%, 90% 30%, 90% 70%, 60% 100%, 40% 100%, 10% 70%, 10% 30%);
+    transition: background-color 0.3s ease;
 
 	font-family: 'oldlondon';
 	font-size: 1.5rem;
 	letter-spacing: .25rem;
+	color: #313131;
+}
+
+.button-bg {
+	background: url("../img/ui/buttons/gold_limestone_texture.webp");
+	margin-top: .2rem;
+	margin-bottom: .2rem;
+
+	padding: 15px 30px;
+	border: none;
+	clip-path: polygon(40% 0%, 60% 0%, 90% 30%, 90% 70%, 60% 100%, 40% 100%, 10% 70%, 10% 30%);
+    transition: background-color 0.3s ease;
+
+	font-family: 'oldlondon';
+	font-size: 1.5rem;
+	letter-spacing: .25rem;
+	color: #313131;
 }
 
 button:hover {
