--- a/css/csnarr_style.css
+++ b/css/csnarr_style.css
@@ -21,6 +21,14 @@
 	text-align: center;
 	position: absolute;
 	width: 70%;
+	opacity: 0;
+	animation: fadeIn 2s forwards;
+}
+
+@keyframes fadeIn {
+	to {
+		opacity: 1;
+	}
 }
 
 .cs-narr-cont-button {
