--- a/css/chs_style.css
+++ b/css/chs_style.css
@@ -2,6 +2,8 @@
 	display: flex;
 	flex-direction: row;
 	margin-top: 4rem;
+	opacity: 0;
+	animation: fadeIn 2s forwards;
 }
 
 /* Choices left/right */
@@ -38,8 +40,6 @@ button.choice {
 
 .chs-pic-container {
 	align-items: center;
-	background-color: silver;
-	border: 5px solid silver;
 	margin-top: 5rem;
 }
 
