--- a/css/init.css
+++ b/css/init.css
@@ -8,6 +8,12 @@
 	src: url(../fonts/airyin/Airyin.otf);
 }
 
+@keyframes fadeIn {
+	to {
+		opacity: 1;
+	}
+}
+
 body {
 	background-color: black;
 	color: white;
