--- a/css/end_screens.css
+++ b/css/end_screens.css
@@ -6,25 +6,25 @@
 	animation: fadeIn 2s forwards;
 }
 
+.end-cont-btn {
+	margin-bottom: 1rem;
+}
+
+.end-msg {
+	font-size: 2rem;
+	text-align: center;
+	position: absolute;
+	width: 70%;
+	top: 15%;
+}
+
 .end-img-container {
 	position: absolute;
 	align-content: center;
-	top: 15%;
+	bottom: 10rem;
 }
 
 .end-img {
 	height: 20rem;
 	width: 30rem;
-}
-
-.end-msg {
-	font-size: 2rem;
-	bottom: 4rem;
-	text-align: center;
-	position: absolute;
-	width: 70%;
-}
-
-.end-cont-btn {
-	margin-top: 1rem;
 }
