--- a/css/csnarr_style.css
+++ b/css/csnarr_style.css
@@ -1,4 +1,4 @@
-.cs-narr-page {
+.narr-page {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -6,18 +6,18 @@
 	animation: fadeIn 2s forwards;
 }
 
-.cs-narr-pic-container {
+.narr-pic-container {
 	position: absolute;
 	align-content: center;
 	top: 15%;
 }
 
-.cs-narr-pic {
+.narr-pic {
 	height: 20rem;
 	width: 30rem;
 }
 
-.cs-narr-story {
+.narr-story {
 	font-size: 2rem;
 	bottom: 4rem;
 	text-align: center;
@@ -25,11 +25,11 @@
 	width: 70%;
 }
 
-.cs-narr-cont-button {
+.narr-cont-button {
 	margin-top: 1rem;
 }
 
-.cs-narr-skip-button {
+.narr-skip-button {
 	color: gray;
 	cursor: pointer;
 	margin-top: 1rem;
