--- a/css/end_screens.css
+++ b/css/end_screens.css
@@ -15,7 +15,7 @@
 	text-align: center;
 	position: absolute;
 	width: 70%;
-	top: 15%;
+	top: 10%;
 }
 
 .end-img-container {
@@ -25,6 +25,6 @@
 }
 
 .end-img {
-	height: 20rem;
-	width: 30rem;
+	height: 400px;
+	width: 600px;
 }
