--- a/css/background.css
+++ b/css/background.css
@@ -1,5 +1,5 @@
 body {
-	background: url(../img/ui/background-img.png);
+	background: url(../img/ui/background-img_snowy.png);
 	background-position: center center;
 	background-attachment: fixed;
 }
