--- a/css/options.css
+++ b/css/options.css
@@ -1,4 +1,4 @@
-#sound-icon {
+/* #sound-icon {
 	width: 100px;
 	height: 100px;
 }
@@ -7,4 +7,4 @@
 	position: absolute;
 	left: 0;
 	bottom: 0;
-}
+} */
